--- a/src/main/resources/password/pwm/AppProperty.properties
+++ b/src/main/resources/password/pwm/AppProperty.properties
@@ -146,7 +146,7 @@ ldap.password.change.self.enable=true
 ldap.password.change.helpdesk.enable=true
 ldap.guid.pattern=@UUID@
 ldap.browser.maxEntries=1000
-ldap.search.paging.enable=auto
+ldap.search.paging.enable=false
 ldap.search.paging.size=500
 localdb.aggressiveCompact.enabled=false
 localdb.compression.enabled=true
