--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,6 +35,13 @@
         <param-name>applicationPath</param-name>
         <param-value>unspecified</param-value>
     </context-param>
+   	<!-- uncomment and set parameters for CAS integration
+	<context-param>
+		<param-name>configurationStrategy</param-name>
+		<param-value>WEB_XML</param-value>
+	</context-param>
+    End CAS Config -->
+    
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
@@ -58,18 +65,18 @@
     <!-- uncomment and set parameters for CAS integration
     <filter>
         <filter-name>CAS Validation Filter</filter-name>
-        <filter-class>org.jasig.cas.client.validation.Cas20ProxyReceivingTicketValidationFilter</filter-class>
+        <filter-class>org.jasig.cas.client.validation.Cas30ProxyReceivingTicketValidationFilter</filter-class>
         <init-param>
             <param-name>casServerUrlPrefix</param-name>
-            <param-value>https://cas.localdomain.local:8443/cas/</param-value>
+            <param-value>${cas.server}</param-value>
         </init-param>
         <init-param>
             <param-name>serverName</param-name>
-            <param-value>https://pwm.localdomain.local:8443</param-value>
+            <param-value>${pwm.server}</param-value>
         </init-param>
         <init-param>
             <param-name>proxyCallbackUrl</param-name>
-            <param-value>https://pwm.localdomain.local:8443/pwm/proxyCallback</param-value>
+            <param-value>${pwm.server}pwm/proxyCallback</param-value>
         </init-param>
         <init-param>
             <param-name>proxyReceptorUrl</param-name>
@@ -81,15 +88,11 @@
         <filter-class>org.jasig.cas.client.authentication.AuthenticationFilter</filter-class>
         <init-param>
             <param-name>casServerLoginUrl</param-name>
-            <param-value>https://cas.localdomain.local:8443/cas/login</param-value>
+            <param-value>${cas.server}login</param-value>
         </init-param>
         <init-param>
             <param-name>serverName</param-name>
-            <param-value>https://pwm.localdomain.local:8443</param-value>
-        </init-param>
-        <init-param>
-            <param-name>renew</param-name>
-            <param-value>false</param-value>
+            <param-value>${pwm.server}</param-value>
         </init-param>
         <init-param>
             <param-name>gateway</param-name>
@@ -99,6 +102,10 @@
     <filter>
         <filter-name>CAS Single Sign Out Filter</filter-name>
         <filter-class>org.jasig.cas.client.session.SingleSignOutFilter</filter-class>
+        <init-param>
+			<param-name>casServerUrlPrefix</param-name>
+			<param-value>${cas.server}</param-value>
+		</init-param>
     </filter>
     <filter-mapping>
         <filter-name>CAS Single Sign Out Filter</filter-name>
@@ -119,7 +126,7 @@
         <filter-name>CAS Validation Filter</filter-name>
         <url-pattern>/proxyCallback</url-pattern>
     </filter-mapping>
-    -->
+    End CAS Config -->
     <filter>
         <filter-name>GZIPFilter</filter-name>
         <filter-class>password.pwm.http.filter.GZIPFilter</filter-class>
