--- a/pom.xml
+++ b/pom.xml
@@ -95,13 +95,13 @@
                         <version>2.6</version>
                         <configuration>
                             <descriptors>
-                                <descriptor>src/assembly/pwm-bundle.xml</descriptor>
+                                <descriptor>src/build/assembly/release-bundle.xml</descriptor>
                             </descriptors>
                             <finalName>${project.build.finalName}-${timestamp.iso}</finalName>
                         </configuration>
                         <executions>
                             <execution>
-                                <id>make-assembly</id>
+                                <id>make-release-bundle</id>
                                 <phase>package</phase>
                                 <goals>
                                     <goal>single</goal>
