--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,12 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
+    <parent>
+        <groupId>org.pwm-project</groupId>
+        <artifactId>pwm-app</artifactId>
+        <version>1.8.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.pwm-project</groupId>
@@ -7,7 +14,7 @@
     <version>1.8.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>PWM Password Self Service</name>
+    <name>PWM Password Self Service: Server</name>
 
     <licenses>
         <license>
@@ -237,6 +244,7 @@
                         <id>validate</id>
                         <phase>validate</phase>
                         <configuration>
+                            <propertyExpansion>basedir=${basedir}</propertyExpansion>
                             <configLocation>src/build/checkstyle.xml</configLocation>
                             <encoding>UTF-8</encoding>
                             <consoleOutput>true</consoleOutput>
