--- a/client/pom.xml
+++ b/client/pom.xml
@@ -54,7 +54,13 @@
                         <configuration>
                             <filesets>
                                 <fileset>
+                                    <directory>.node</directory>
+                                </fileset>
+                                <fileset>
                                     <directory>dist</directory>
+                                </fileset>
+                                <fileset>
+                                    <directory>node_modules</directory>
                                 </fileset>
                             </filesets>
                         </configuration>
