--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -248,11 +248,15 @@ password.strength.threshold.strong=75
 password.strength.threshold.good=45
 password.strength.threshold.weak=20
 password.strength.threshold.veryWeak=0
+peoplesearch.export.csv.maxDepth=1
+peoplesearch.export.csv.maxItems=1000
+peoplesearch.export.csv.maxSeconds=600
+peoplesearch.export.csv.threads=10
+peoplesearch.orgChart.enableChildCount=true
+peoplesearch.orgChart.maxParents=50
 peoplesearch.values.verifyUserDN=true
 peoplesearch.values.maxCount=100
 peoplesearch.view.detail.links=
-peoplesearch.orgChart.enableChildCount=true
-peoplesearch.orgChart.maxParents=50
 pwNotify.batch.count=100
 pwNotify.batch.delayTimeMultiplier=1.0
 pwNotify.maxLdapSearchSize=1000000
