--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -252,6 +252,7 @@ peoplesearch.export.csv.maxDepth=1
 peoplesearch.export.csv.maxItems=1000
 peoplesearch.export.csv.maxSeconds=600
 peoplesearch.export.csv.threads=10
+peoplesearch.mailto.maxDepth=1
 peoplesearch.orgChart.enableChildCount=true
 peoplesearch.orgChart.maxParents=50
 peoplesearch.values.verifyUserDN=true
