--- a/rest-test-service/pom.xml
+++ b/rest-test-service/pom.xml
@@ -106,6 +106,18 @@
         </dependency>
         <!-- / container dependencies -->
 
+        <!-- library dependencies -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <!-- / library dependencies -->
     </dependencies>
 
 </project>
