--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -321,8 +321,9 @@ wordlist.maxCharLength=64
 wordlist.minCharLength=2
 wordlist.import.autoImportRecheckSeconds=432000
 wordlist.import.durationGoalMS=1000
-wordlist.import.minTransactionGoal=10
-wordlist.import.maxTransactionGoal=350000
+wordlist.import.minTransactions=10
+wordlist.import.maxTransactions=200000
+wordlist.inspector.frequencySeconds=300
 ws.restClient.pwRule.haltOnError=true
 ws.restServer.signing.form.timeoutSeconds=120
 ws.restServer.statistics.defaultHistoryDays=7
