--- a/client/pom.xml
+++ b/client/pom.xml
@@ -16,6 +16,8 @@
 
     <properties>
         <project.root.basedir>${project.basedir}/..</project.root.basedir>
+        <node.version>v14.17.2</node.version>
+        <npm.version>6.14.13</npm.version>
     </properties>
 
     <profiles>
@@ -79,11 +81,11 @@
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
-                <version>1.7.6</version>
+                <version>1.12.0</version>
                 <configuration>
-                    <nodeVersion>v8.9.4</nodeVersion>
-                    <npmVersion>5.6.0</npmVersion>
-                    <installDirectory>.node</installDirectory>
+                    <nodeVersion>${node.version}</nodeVersion>
+                    <npmVersion>${npm.version}</npmVersion>
+                    <installDirectory>${settings.localRepository}/frontend-maven-plugin/node-${node.version}</installDirectory>
                 </configuration>
                 <executions>
                     <execution>
@@ -115,7 +117,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>3.2.0</version>
                 <configuration>
                     <archive>
                         <manifestEntries>
