--- a/rest-test-service/pom.xml
+++ b/rest-test-service/pom.xml
@@ -86,6 +86,12 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.pwm-project</groupId>
+            <artifactId>pwm-lib-util</artifactId>
+            <version>2.1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
         <!-- / library dependencies -->
     </dependencies>
 
