--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <owasp.skip>false</owasp.skip>
         <checkstyle.skip>false</checkstyle.skip>
         <skipTests>false</skipTests>
+        <jarsigner.skip>true</jarsigner.skip>
 
         <!-- git.commit.time is populated via git-commit-id-plugin and results in a (hopefully) reproducible maven build -->
         <project.build.outputTimestamp>2022-03-11T12:52:47Z</project.build.outputTimestamp>
@@ -330,12 +331,12 @@
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>4.6.0.0</version>
+                <version>4.7.0.0</version>
                 <dependencies>
                     <dependency>
                         <groupId>com.github.spotbugs</groupId>
                         <artifactId>spotbugs</artifactId>
-                        <version>4.6.0</version>
+                        <version>4.7.0</version>
                     </dependency>
                 </dependencies>
                 <configuration>
@@ -444,7 +445,7 @@
         <dependency>
             <groupId>com.github.spotbugs</groupId>
             <artifactId>spotbugs-annotations</artifactId>
-            <version>4.6.0</version>
+            <version>4.7.0</version>
             <scope>provided</scope>
         </dependency>
 
@@ -470,7 +471,7 @@
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
             <artifactId>wiremock-jre8</artifactId>
-            <version>2.33.1</version>
+            <version>2.33.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
